fix:font not visible too lighting

--- a/style.scss
+++ b/style.scss
@@ -64,7 +64,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     font-family: 'Lato', sans-serif;
 }
 
@@ -78,6 +79,10 @@ h2 {
 
 h3 {
     font-weight: 300;
+}
+
+h4 {
+    font-weight: 500;
 }
 
 ion-app {
